fix(sp): VAN-27490 fix two dialogs' overflow issue.

--- a/vtr-ui/src/app/components/modal/modal-smart-performance-subscribe/modal-smart-performance-subscribe.component.scss
+++ b/vtr-ui/src/app/components/modal/modal-smart-performance-subscribe/modal-smart-performance-subscribe.component.scss
@@ -27,7 +27,6 @@ $marginY: 3.5rem;
 
 .modal-smart-performance-subscribe {
 	padding: 0;
-	border-radius: 1rem;
 	background: $light;
 	width: 100%;
 	height: calc(100% - 2.4rem);
