--- a/vtr-ui/src/styles.scss
+++ b/vtr-ui/src/styles.scss
@@ -2046,6 +2046,7 @@ vtr-ui-smart-performance-scanning {
 
 	.mat-dialog-container {
 		padding: 2rem 0 0 0;
+		overflow: hidden;
 	}
 
 	@media #{$breakpoint_lg} {
